# alphagamma-descriptor

./: .gitmodules  AffineDataset.m  LICENSE  LibertyDataset.m  README.md  affine_batch_experiment_image_pairs.m  affine_batch_experiment_rotation.m  affine_batch_experiment_scale.m  affine_batch_experiment_shear.m  affine_detect_corresponding_keypoints.m  affine_display_results.m  affine_evaluate_descriptor_extractors_on_image_pair.m  affine_get_experiment_definition.m  affine_run_experiment.m  affine_run_experiments_image_pairs.m  affine_run_experiments_rotation.m  affine_run_experiments_scale.m  affine_run_experiments_shear.m  affine_visualize_correspondences.m  augment_keypoints_with_id.m  batch_experiment_image_pairs.m  build_all.bat  build_all.sh  build_dependencies.sh  compile_code.m  compute_keypoint_distances.m  define_experiment.m  detect_corresponding_keypoints.m  evaluate_descriptor_extractor.m  jasna_affine_experiment.m  jasna_all_experiments.m  jasna_dtu_experiment.m  jasna_get_experiment_definition.m  jasna_pami_create_table.m  jasna_visualizations_dtu.m  jasna_visualizations_webcam.m  jasna_webcam_experiment.m  liberty_find_optimal_parameters.m  liberty_find_optimal_parameters_brief.m  liberty_find_optimal_parameters_latch.m  (+16 more)
mex/: compute_keypoint_distances.cpp
paper2017/: bargraph.tmpl.tex  jasna_affine_experiment.m  jasna_display_results.m  jasna_dtu_experiment.m  jasna_experiment_affine.m  jasna_experiment_dtu.m  jasna_experiment_rotation.m  jasna_experiment_scale.m  (+8 more)
utils/dense_stereo_ground_truth/: CMakeLists.txt  main.cpp  resources.qrc
(+82 files in other folders)
